fix: Content shift on view change

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -30,6 +30,7 @@
   font-size: 0.8rem;
   height: 0.8rem;
   font-weight: bold;
+  flex: 0 0 auto;
 }
 
 .tabsContent {
